<resources>
    <string name="app_name">Mind Game</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_edit">Edit User Name</string>
    <string name="menu_achivements">Achivements</string>

    <string name="action_delete">Delete Records</string>
    <string name="action_sound">Sound</string>
    <string name="action_info">Info</string>
</resources>