<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item android:title="@string/menu_achivements">
        <menu>
            <item
                android:id="@+id/level_one"
                android:title="Level 1" />

            <item
                android:id="@+id/level_two"
                android:title="Level 2" />

            <item
                android:id="@+id/level_three"
                android:title="Level 3" />

            <item
                android:id="@+id/level_four"
                android:title="Level 4" />

            <item
                android:id="@+id/level_five"
                android:title="Level 5" />

            <item
                android:id="@+id/level_six"
                android:title="Level 6" />

        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/menu_edit" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home"
            android:visible="false"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery"
            android:visible="false"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow"
            android:visible="false"/>
    </group>
</menu>