<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/action_info"
        android:icon="@drawable/ic_outline_info_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_baseline_edit_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_sound"
        android:checkable="true"
        app:showAsAction="withText" />

</menu>